--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,4 +1,15 @@
 
 <form action="/pirates" method="post">
-
+  <h2>Pirate</h2>
+  <p>Name: <input type="text" name="pirate[name]"></p>
+  <p>Height: <input type="text" name="pirate[height]"></p>
+  <p>Weight: <input type="text" name="pirate[weight]"></p>
+  <h2>Ships</h2>
+  <p>Name: <input type="text" name="pirate[ships][][name]"></p>
+  <p>Type: <input type="text" name="pirate[ships][][type]"></p>
+  <p>Booty: <input type="text" name="pirate[ships][][booty]"></p>
+  <p>Name: <input type="text" name="pirate[ships][][name]"></p>
+  <p>Type: <input type="text" name="pirate[ships][][type]"></p>
+  <p>Booty: <input type="text" name="pirate[ships][][booty]"></p>
+  <input type="submit" name="submit" id="submit">
 </form>
