--- a/views/new.erb
+++ b/views/new.erb
@@ -5,7 +5,7 @@
   <p>Height: <input type="text" name="pirate[height]"></p>
   <p>Weight: <input type="text" name="pirate[weight]"></p>
   <h2>Ships</h2>
-  <p>Name: <input type="text" name="pirate[ships][][name]"></p>
+  <p>Name: <input type="text" name="pirate[ships][][name]" id="ship_name_1"></p>
   <p>Type: <input type="text" name="pirate[ships][][type]"></p>
   <p>Booty: <input type="text" name="pirate[ships][][booty]"></p>
   <p>Name: <input type="text" name="pirate[ships][][name]"></p>
