--- a/views/new.erb
+++ b/views/new.erb
@@ -6,10 +6,10 @@
   <p>Weight: <input type="text" name="pirate[weight]"></p>
   <h2>Ships</h2>
   <p>Name: <input type="text" name="pirate[ships][][name]" id="ship_name_1"></p>
-  <p>Type: <input type="text" name="pirate[ships][][type]"></p>
-  <p>Booty: <input type="text" name="pirate[ships][][booty]"></p>
-  <p>Name: <input type="text" name="pirate[ships][][name]"></p>
-  <p>Type: <input type="text" name="pirate[ships][][type]"></p>
-  <p>Booty: <input type="text" name="pirate[ships][][booty]"></p>
+  <p>Type: <input type="text" name="pirate[ships][][type]" id="ship_type_1"></p>
+  <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_type_1"></p>
+  <p>Name: <input type="text" name="pirate[ships][][name]"id="ship_name_2"></p>
+  <p>Type: <input type="text" name="pirate[ships][][type]"id="ship_type_2"></p>
+  <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_type_2"></p>
   <input type="submit" name="submit" id="submit">
 </form>
