--- a/views/new.erb
+++ b/views/new.erb
@@ -7,9 +7,9 @@
   <h2>Ships</h2>
   <p>Name: <input type="text" name="pirate[ships][][name]" id="ship_name_1"></p>
   <p>Type: <input type="text" name="pirate[ships][][type]" id="ship_type_1"></p>
-  <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_type_1"></p>
+  <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></p>
   <p>Name: <input type="text" name="pirate[ships][][name]"id="ship_name_2"></p>
   <p>Type: <input type="text" name="pirate[ships][][type]"id="ship_type_2"></p>
-  <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_type_2"></p>
+  <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></p>
   <input type="submit" name="submit" id="submit">
 </form>
